# transfer-service

./: .dockerignore  .env.example  Dockerfile  README.md  config.yml  conftest.py  main.py  pyproject.toml  requirements-test.txt  requirements.txt
.openshift/: Jenkinsfile  Makefile  s3-transfer-service_multibranch_pipeline.xml  s3-transfer-service_template.yml
app/: __init__.py  app.py
app/helpers/: events.py  message_parser.py  transfer.py
app/services/: pulsar.py  rabbit.py  vault.py
docs/: s3-t-s_sequence-diagram.plantuml  transfer-service_sequence-diagram.plantuml
openshift/: Jenkinsfile  Makefile  wait4rollout.sh
tests/: test_app.py  test_pulsar.py
tests/helpers/: test_events.py  test_message_parser.py  test_transfer.py
tests/resources/: __init__.py  messages.py
tests/resources/messages/: transfer_message.json  transfer_message_no_bucket.json  transfer_message_no_credentials.json  transfer_message_no_destination.json  transfer_message_no_domain.json  transfer_message_no_headers.json  transfer_message_no_host.json  transfer_message_no_object.json  transfer_message_no_outcome.json  transfer_message_no_path.json  transfer_message_no_source.json  transfer_message_no_url.json
tests/services/: test_pulsar.py  test_vault.py
